[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Camera.gd" type="Script" id=1]

[node name="Camera2D" type="Camera2D"]
current = true
smoothing_enabled = true
script = ExtResource( 1 )

[node name="ShakeTween" type="Tween" parent="."]

[node name="Duration" type="Timer" parent="ShakeTween"]

[node name="Frequency" type="Timer" parent="ShakeTween"]

[connection signal="timeout" from="ShakeTween/Duration" to="." method="_on_Duration_timeout"]
[connection signal="timeout" from="ShakeTween/Frequency" to="." method="_on_Frequency_timeout"]
